[Add] Update Styles

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -150,7 +150,7 @@ html[data-theme='dark'] .diagram {
 }
 
 pre > code {
-  padding: 0.5em 1em !important;
+  padding: 0.5em 0 !important;
 }
 
 // Footnotes
